fix: simplificar CORS config con orden alto y agregar health endpoint raíz