@@ -3,42 +3,27 @@ package com.andinobus.backendsmartcode.config;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-public class CorsConfig implements WebMvcConfigurer {
+public class CorsConfig {
 
     @Value("${app.cors.allowed-origins:http://localhost:3000}")
     private String allowedOriginsProperty;
 
-    @Override
-    public void addCorsMappings(CorsRegistry registry) {
-        String[] origins = Arrays.stream(allowedOriginsProperty.split(","))
-                .map(String::trim)
-                .filter(s -> !s.isEmpty())
-                .toArray(String[]::new);
-
-        registry.addMapping("/**")
-                .allowedOrigins(origins)
-                .allowedMethods("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD")
-                .allowedHeaders("*")
-                .exposedHeaders("Location", "Content-Disposition")
-                .allowCredentials(false)
-                .maxAge(3600);
-    }
-
     /**
-     * Filtro CORS de más bajo nivel para asegurar que los preflight requests
+     * Filtro CORS con la más alta prioridad para asegurar que los preflight requests
      * se manejen correctamente antes de cualquier otro filtro.
      */
     @Bean
+    @Order(Ordered.HIGHEST_PRECEDENCE)
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         
@@ -48,10 +33,15 @@ public class CorsConfig implements WebMvcConfigurer {
                 .filter(s -> !s.isEmpty())
                 .toList();
         
+        // Si no hay orígenes configurados, permitir el frontend por defecto
+        if (origins.isEmpty()) {
+            origins = List.of("https://frontandinobus-production.up.railway.app", "http://localhost:3000");
+        }
+        
         config.setAllowedOrigins(origins);
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"));
-        config.setAllowedHeaders(Arrays.asList("*"));
-        config.setExposedHeaders(Arrays.asList("Location", "Content-Disposition"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(Arrays.asList("Location", "Content-Disposition", "Authorization"));
         config.setAllowCredentials(false);
         config.setMaxAge(3600L);
 
